--- a/src/sass.scss
+++ b/src/sass.scss
@@ -1,3 +1,4 @@
 @import '../scss/base';
 // @import '../scss/checkbox';
-@import '../scss/pokemon41';
+// @import '../scss/pokemon42';
+@import '../scss/framed';
